# p0ly

./: .gitignore  README.md  dune-project  poly.md  test_vfs.txt
lib/: dune  poly_ai.ml  poly_ast.ml  poly_brain.ml  poly_core.ml  poly_parser.ml  poly_vfs.ml
lib/execution/: executor.ml  poly_vfs.ml  vfs.ml
lib/interface/: cli.ml  repl.ml  tui.ml
lib/perception/: ast.ml  parser.ml  poly_index.ml  poly_parser.ml
lib/reasoning/: agent.ml  llm.ml  poly_tools.ml
test/: dune  test_index.ml  test_parser.ml  test_poly.ml  test_vfs.ml
