(include_subdirs unqualified)

(library
 (name poly)
 (public_name poly)
 (libraries
  yojson
  ppx_deriving_yojson
  cmdliner
  cohttp-eio
  eio
  eio_main
  compiler-libs.common
  unix
  uri
  notty
  notty.unix
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty
  tls-eio
  ca-certs
  mirage-crypto-rng-eio)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show)))
